# hashicorp-downloader

./: Cargo.toml  LICENSE  LICENSE.md  README.md
.github/workflows/: release-version-bump.yml  release.yaml
scripts/: bump_version.py
src/: main.rs
