[package]
name = "hashicorp-downloader"
version = "0.1.0"
edition = "2021"
authors = ["socketz <info@socketz.net>"]
description = "A simple tool to download Hashicorp tools"
license = "MIT"
repository = "https://github.com/socketz/hashicorp-downloader"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
lazy_static = "1.5.0"
reqwest = { version = "0.11.22", features = ["cookie_store", "cookies", "deflate", "json", "serde_json"] }
serde = { version = "1.0.204", features = ["alloc", "derive"] }
serde_json = "1.0.108"
thiserror = "1.0.63"
tokio = { version = "1.33.0", features = ["full"] }
