[package]
name = "hashicorp-downloader"
version = "0.1.0"
edition = "2021"
authors = ["socketz <info@socketz.net>"]
description = "A fast, cross-platform HashiCorp product downloader written in Rust, to always get the version you need."
license = "MIT"
repository = "https://github.com/socketz/hashicorp-downloader"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
lazy_static = "1.5.0"
reqwest = { version = "0.12.22", default-features = false, features = ["cookies", "deflate", "json", "rustls-tls"] }
serde = { version = "1.0.204", features = ["alloc", "derive"] }
serde_json = "1.0.108"
thiserror = "2.0.12"
tokio = { version = "1.33.0", features = ["full"] }

[[bin]]
name = "hcd"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
lto = false
codegen-units = 256
strip = "none"

[target.aarch64-unknown-linux-gnu]
linker = "aarch64-linux-gnu-ld"